--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3|^8.0|^8.2",
         "hekmatinasser/verta": "^8.3",
         "shetabit/payment": "^5.4.0",
-        "illuminate/support": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0|^10.0",
         "cviebrock/eloquent-sluggable": "^8.0|^9.0"
     },
     "require-dev": {
