--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "salamzadeh/pb-helper",
+    "name": "kamranshalilian/pb-helper",
     "description": "Laravel helper package for Iranians",
     "keywords": [
         "laravel",
